welcome.lessons.welcome.variables.Variables.scala.error
Variables:5: error: too many arguments for method getY: ()Int
if(porteBiscuit()&&(!getY(0):Int))
                         ^Variables:5: error: type mismatch;
 found   : Int
 required: Boolean
if(porteBiscuit()&&(!getY(0):Int))
                            ^Variables:7: error: not found: value Y
if(Y==0)
   ^