welcome.lessons.welcome.variables.Variables.scala.code
while (!estSurBiscuit())
	avance();//avance jusqua au biscuit
if (estSurBiscuit())
	prendBiscuit();//prend le biscuit
if(porteBiscuit()&&(!getY(0):Int))
	recule();
if(Y==0)
	poseBiscuit();